--- a/2023thef2e/mission1/index.html
+++ b/2023thef2e/mission1/index.html
@@ -13,21 +13,21 @@
         <div class="d-flex header_block">
             <img src="./image/logo.svg" alt="" srcset="">
             <div class="d-flex">
-                <ul class="d-flex">
-                    <li class="active"><a>候選人主張</a></li>
-                    <li>最新活動</li>
-                    <li>政策議題</li>
-                    <li>民眾服務信箱</li>
+                <ul class="d-flex header_menu">
+                    <li class="active"><a href="#copywriting">候選人主張</a></li>
+                    <li><a href="#news">最新活動</a></li>
+                    <li><a href="#policy">政策議題</a></li>
+                    <li><a href="#service">民眾服務信箱</a></li>
                 </ul>
                 <button>
-                    <img src="./image/button1.svg" alt="" srcset="">
+                    <a href="#donate"><img src="./image/button1.svg" alt="" srcset=""></a>
                 </button>
             </div>
         </div>
     </header>
-    <main>
-        <section class="container">
-            <div class="p-relative" id="main-view">
+    <main class="bg-gray">
+        <div class="container">
+            <div class="p-relative" id="main_view">
                 <img id="activity" src="./image/activity.svg" alt="" srcset="">
                 <img id="slogan" src="./image/slogan.svg" alt="">
                 <img id="candidate" src="./image/candidate.svg" alt="">
@@ -35,17 +35,85 @@
                 <img id="english_name" src="./image/english_name.svg" alt="" srcset="">
             </div>
             <article>
-                <div id="copywriting">
+                <img id="mark" src="./image/mark.svg" alt="" srcset="">
+                <div id="copywriting" name="copywriting">
                     <h1>護航台灣幸福經濟 從照顧每一隻貓咪開始</h1>
                     <p>我堅信，藉由推動更完善的貓咪福利和相關政策，更是間接地投資於台灣的未來。畢竟，民眾的身心健康與工作熱情是推動經濟的核心動力。透過完善的貓咪福利政策，為台灣的 GDP 經濟帶來巨大效益。 </p>
                     <p>因此，我期望能在立法院內推進這些政策，確保每一隻貓咪都能得到他們應有的照顧，同時也為台灣的經濟發展助一臂之力。</p>
                 </div>
             </article>
-            <div>
-
+            <div id="news" name="news">
+                <img src="./image/news.svg" alt="">
+                <ul>
+                    <li>
+                        <span></span>
+                        <img src="" alt="">
+                        <h2>參與台北寵物論壇 爭取貓咪友善環境</h2>
+                        <p>炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+                    </li>
+                    <li>
+                        <span>2023.12.26</span>
+                        <img src="" alt="">
+                        <h2>帶著你的貓耳，來和我一起走！</h2>
+                        <p>街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！這次的活動不僅讓我看到大家的熱情，更加堅定了我推進「貓咪友善環境」政策的決心。</p>
+                    </li>
+                    <li>
+                        <span>2023.12.20</span>
+                        <img src="" alt="">
+                        <h2>收容所模特兒大比拼！</h2>
+                        <p>活動三消息內容：今天的收容所不再是一片寂靜。為了讓更多人認識到這裡的毛孩子，我們舉辦了一場前所未有的「模特兒走秀」！</p>
+                    </li>
+                </ul>
             </div>
-        </section>
+        </div>
     </main>
-    <footer></footer>
+    <section id="policy" name="policy" class="bg-primary">
+        <div class="container">
+            <img src="./image/policy.svg" alt="">
+            <div class="policy_content">
+                <div>
+                    <p>政策一</p>
+                    <h2>為毛孩子謀福利！推動寵物醫療保障方案</h2>
+                    <ol>
+                        <li>設立寵物醫療基金：每年撥款新台幣 10 億元，專款專用於支援家庭寵物的醫療費用</li>
+                        <li>提供醫療補助：每隻寵物每年可獲得高達新台幣 20,000 元的醫療補助，減輕飼主的經濟壓力</li>
+                        <li>合作動物醫院：目前已有和超過 200 家動物醫院進行初步的合作討論</li>
+                    </ol>
+                </div>
+                <div>
+                    <p>政策二</p>
+                    <h2>打造休閒天堂！推廣寵物休閒與娛樂場所</h2>
+                    <ol>
+                        <li>建立寵物公園：每年撥款新台幣 5 億元，用於在各大都市建立專屬的寵物公園。根據初步規劃，預計在第一年內，將在全國範圍內建立至少 10 座寵物公園</li>
+                        <li>推廣寵物友善商家：鼓勵商家提供寵物友善的環境，並為參與的商家提供稅收優惠。預計在政策實施後的首年，將有超過 500 家商家加入此計畫
+                        <li>舉辦寵物活動和工作坊：與各大寵物社團和組織合作，每年舉辦至少 5 場大型的寵物活動，包括寵物才藝比賽、飼養知識工作坊等</li>
+                    </ol>
+                </div>
+                <div>
+                    <p>政策三</p>
+                    <h2>推廣寵物飼養教育，讓愛更加專業</h2>
+                    <ol>
+                        <li>建立寵物飼養教育中心：每年撥款新台幣 3 億元，用於在全國各地建立專業的寵物飼養教育中心。預計在第一年內，在全國至少 5 大城市設立教育中心。</li>
+                        <li>推廣寵物飼養課程：與學校、社區組織和寵物社團合作，推出一系列免費的寵物飼養課程。預計每年將有超過 10,000 名市民受益。</li>
+                        <li>製作教育資料：出版寵物飼養手冊、影片和線上課程，讓所有有意飼養寵物的家庭都能輕鬆取得正確的知識</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="donate">
+        <div class="donate_bg"></div>
+        <div class="container">
+            <div class="donate_content">
+                <img src="./image/donate.svg" alt="">
+                <h3>您的小筆捐款，是每隻毛孩未來的大大動力！</h3>
+                
+            </div>
+        </div>
+    </section>
+    <section id="service" name="service" class="bg-gray">
+        <div class="container"></div>
+    </section>
+    <footer class="bg-primary"></footer>
 </body>
 </html>
