--- a/2023thef2e/mission1/index.html
+++ b/2023thef2e/mission1/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="d-flex header_block">
-            <img src="./image/logo.svg" alt="" srcset="">
-            <div class="d-flex">
-                <ul class="d-flex header_menu">
+            <img src="./image/logo.svg" alt="LOGO" srcset="" id="logo">
+            <div class="d-flex header_menu">
+                <ul class="d-flex">
                     <li class="active"><a href="#copywriting">候選人主張</a></li>
                     <li><a href="#news">最新活動</a></li>
                     <li><a href="#policy">政策議題</a></li>
@@ -23,16 +23,17 @@
                     <a href="#donate"><img src="./image/button1.svg" alt="" srcset=""></a>
                 </button>
             </div>
+            <img src="./image/menu.svg" alt="" id="menu">
         </div>
     </header>
     <main class="bg-gray">
         <div class="container">
             <div class="p-relative" id="main_view">
-                <img id="activity" src="./image/activity.svg" alt="" srcset="">
-                <img id="slogan" src="./image/slogan.svg" alt="">
-                <img id="candidate" src="./image/candidate.svg" alt="">
-                <img id="chinese_name" src="./image/chinese_name.svg" alt="" srcset="">
-                <img id="english_name" src="./image/english_name.svg" alt="" srcset="">
+                <img id="activity" src="./image/activity.svg" alt="2023 THE F2E 立委競選" srcset="">
+                <img id="slogan" src="./image/slogan.svg" alt="從喵的眼中，看見台灣" srcset="./image/m/slogan.svg 2x">
+                <img id="candidate" src="./image/candidate.svg" alt="喵立翰">
+                <img id="chinese_name" src="./image/chinese_name.svg" alt="喵立翰" srcset="">
+                <img id="english_name" src="./image/english_name.svg" alt="Miao Li-Han" srcset="./image/m/english_name.svg 2x">
             </div>
             <article>
                 <img id="mark" src="./image/mark.svg" alt="" srcset="">
