--- a/2023thef2e/mission1/index.html
+++ b/2023thef2e/mission1/index.html
@@ -7,6 +7,7 @@
     <title>從喵的眼中，看見台灣 - 喵立翰（Miao Li-Han）</title>
     <link rel="icon" href="./image/favicon.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.4/swiper-bundle.css" integrity="sha512-eCyejMSBO5OZwV8DiCj9XETkTRH4FQBrvxod2fd12/xDKIzsc26NzmUZWucuvOXxOCooPb5NDqP5iOD8SzeOyQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/index.min.css">
 </head>
 <body>
@@ -14,42 +15,47 @@
         <div class="d-flex header_block">
             <a href="#"><img src="./image/logo.svg" alt="LOGO" srcset="" id="logo"></a>
             <div class="d-flex header_menu">
-                <ul class="d-flex">
-                    <li><a href="#copywriting">候選人主張</a></li>
-                    <li><a href="#news">最新活動</a></li>
-                    <li><a href="#policy">政策議題</a></li>
-                    <li><a href="#service">民眾服務信箱</a></li>
+                <ul>
+                    <img src="./image/menu_close.svg" alt="menu" id="menu_close" loading="lazy" onclick="closeMenu()">
+                    <a href="#"><img id="logo3" src="./image/logo2.svg" alt="LOGO" loading="lazy"></a>
+                    <li class="header_menu_item"><a href="#copywriting">候選人主張</a></li>
+                    <li class="header_menu_item"><a href="#news">最新活動</a></li>
+                    <li class="header_menu_item"><a href="#policy">政策議題</a></li>
+                    <li class="header_menu_item"><a href="#service">民眾服務信箱</a></li>
+                    <button class="btn btn-sm header_menu_item" id="button_donate">
+                        <a href="#donate">
+                            <img src="./image/money.svg" alt="icon" loading="lazy">
+                            <p>小額捐款</p>
+                        </a>
+                    </button>
                 </ul>
-                <button class="btn btn-sm">
-                    <a href="#donate">
-                        <img src="./image/money.svg" alt="icon" loading="lazy">
-                        <p>小額捐款</p>
-                    </a>
-                </button>
             </div>
-            <img src="./image/menu.svg" alt="menu" id="menu" loading="lazy">
+            <img src="./image/menu.svg" alt="menu" id="menu" loading="lazy" onclick="openMenu()">
         </div>
     </header>
     <main class="bg-gray">
         <div class="container">
             <div class="p-relative" id="main_view">
                 <img id="activity" src="./image/activity.svg" alt="2023 THE F2E 立委競選" srcset="">
-                <img id="slogan" src="./image/slogan.svg" alt="從喵的眼中，看見台灣" srcset="./image/m/slogan.svg 2x">
+                <img id="slogan" src="./image/slogan.svg" alt="從喵的眼中，看見台灣" srcset="">
+                <img id="slogan_m" src="./image/m/slogan.svg" alt="從喵的眼中，看見台灣" srcset="">
                 <img id="candidate" src="./image/candidate.svg" alt="喵立翰">
-                <img id="chinese_name" src="./image/chinese_name.svg" alt="喵立翰" srcset="" loading="lazy">
-                <img id="english_name" src="./image/english_name.svg" alt="Miao Li-Han" srcset="./image/m/english_name.svg 2x">
+                <img id="chinese_name" src="./image/chinese_name.svg" alt="喵立翰" srcset="" loading="lazy" data-aos="fade-down">
+                <img id="english_name" src="./image/english_name.svg" alt="Miao Li-Han" srcset="" data-aos="fade-right">
+                <img id="english_name_m" src="./image/m/english_name.svg" alt="Miao Li-Han" srcset="">
+
             </div>
             <article class="d-flex justify-content-right">
                 <img id="mark" src="./image/mark.svg" alt="KEEP IT POSSIBLE" srcset="">
-                <div id="copywriting" name="copywriting">
+                <div id="copywriting" name="copywriting" data-aos="fade-up">
                     <h1>護航台灣幸福經濟 從照顧每一隻貓咪開始</h1>
                     <p>我堅信，藉由推動更完善的貓咪福利和相關政策，更是間接地投資於台灣的未來。畢竟，民眾的身心健康與工作熱情是推動經濟的核心動力。透過完善的貓咪福利政策，為台灣的 GDP 經濟帶來巨大效益。 </p>
                     <p>因此，我期望能在立法院內推進這些政策，確保每一隻貓咪都能得到他們應有的照顧，同時也為台灣的經濟發展助一臂之力。</p>
                 </div>
             </article>
             <div id="news" name="news">
-                <img id="news_title" src="./image/news.svg" alt="最新活動" loading="lazy">
-                <div id="news_in_mobile">
+                <img id="news_title" src="./image/news.svg" alt="最新活動" loading="lazy" data-aos="fade-up">
+                <div id="news_in_mobile" data-aos="fade-up">
                     <div class="swiper-container" id="news_swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -67,12 +73,12 @@
                             <div class="swiper-slide">
                                 <div class="news_card">
                                     <div class="news_img">
-                                        <img src="./image/news2.svg" alt="帶著你的貓耳，來和我一起走！<" loading="lazy">
+                                        <img src="./image/news2.svg" alt="帶著你的貓耳，來和我一起走！" loading="lazy">
                                     </div>
                                     <div class="news_date"><p>24</p><span>DEC.</span></div>
                                     <div class="news_content">
                                         <h3>帶著你的貓耳，來和我一起走！</h3>
-                                        <p>街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！這次的活動不僅讓我看到大家的熱情，更加堅定了我推進「貓咪友善環境」政策的決心。</p>                            
+                                        <p>街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！這次的活動不僅讓我看到大家的熱情，更加堅定了我推進「貓咪友善環境」政策的決心。</p>
                                     </div>
                                 </div>
                             </div>
@@ -89,10 +95,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-pagination"></div>
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                <div id="news_in_desktop">
+                <div id="news_in_desktop" data-aos="fade-up">
                     <div class="news_card">
                         <div class="news_img">
                             <img src="./image/news1.svg" alt="參與台北寵物論壇 爭取貓咪友善環境" loading="lazy">
@@ -105,7 +111,7 @@
                     </div>
                     <div class="news_card">
                         <div class="news_img">
-                            <img src="./image/news2.svg" alt="" loading="lazy">
+                            <img src="./image/news2.svg" alt="帶著你的貓耳，來和我一起走！" loading="lazy">
                         </div>
                         <div class="news_content">
                             <div class="news_date">2023.12.24</div>
@@ -115,7 +121,7 @@
                     </div>
                     <div class="news_card">
                         <div class="news_img">
-                            <img src="./image/news3.svg" alt="" loading="lazy">
+                            <img src="./image/news3.svg" alt="收容所模特兒大比拼！" loading="lazy">
                         </div>
                         <div class="news_content">
                             <div class="news_date">2023.12.20</div>
@@ -129,8 +135,8 @@
     </main>
     <section id="policy" name="policy" class="bg-primary">
         <div class="container">
-            <img id="policy_title" src="./image/policy.svg" alt="政策議題" loading="lazy">
-            <div class="policy_content">
+            <img id="policy_title" src="./image/policy.svg" alt="政策議題" loading="lazy" data-aos="fade-up">
+            <div class="policy_content" data-aos="fade-up">
                 <div>
                     <p>政策一</p>
                     <h2>為毛孩子謀福利！推動寵物醫療保障方案</h2>
@@ -164,21 +170,21 @@
     <section id="donate">
         <div class="donate_bg"></div>
         <div class="container">
-            <div class="donate_content">
+            <div class="donate_content" id="donate_front">
                 <img src="./image/donate.svg" alt="小額捐款" loading="lazy" id="donate_title">
                 <h3>您的小筆捐款，是每隻毛孩未來的大大動力！</h3>
                 <img src="./image/totalamount.svg" alt="累積總金額" loading="lazy" id="totalamount">
-                <h4>NT$<span>987,344,333</span></h4>
-                <button class="btn btn-sm">
+                <h4>NT$<span class="counter">987,655,873</span></h4>
+                <button class="btn btn-sm" onclick="openDonatePlan()">
                     <a href="javascript:;">
                         <img src="./image/money.svg" alt="icon" loading="lazy">
                         <p>前往捐款</p>
                     </a>
                 </button>
             </div>
-            <div class="donate_content">
+            <div class="donate_content" id="donate_back" style="display: none;">
                 <p class="donate_content_title">選擇捐款方案</p>
-                <form>
+                <form id="Donate_form">
                     <div class="donate_plan">
                         <div class="active donate_plan_item">
                             <h6>喵星人之友</h6>
@@ -187,26 +193,26 @@
                         </div>
                         <div class="donate_plan_item">
                             <h6>喵星大使</h6>
-                            <h5>NT$600</h5>
+                            <h5>NT$6,000</h5>
                             <span>已有2000人贊助</span>
                         </div>
                         <div class="donate_plan_item">
                             <h6>喵星傳奇</h6>
-                            <h5>NT$600</h5>
+                            <h5>NT$60,000</h5>
                             <span>已有9957人贊助</span>
                         </div>
                         <div class="donate_plan_item">
                             <label for="">自訂捐款金額</label>
-                            <input type="text" placeholder="請輸入捐款金額">
+                            <input type="number" placeholder="請輸入捐款金額">
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-sm btn-line cancel">
+                        <button class="btn btn-sm btn-line cancel" onclick="closeDonatePlan()" type="button">
                             <a href="javascript:;">
                                 <p>返回</p>
                             </a>
                         </button>
-                        <button class="btn btn-sm">
+                        <button class="btn btn-sm" type="button" onclick="replyDonate()">
                             <a href="javascript:;">
                                 <img src="./image/money.svg" alt="icon" loading="lazy">
                                 <p>我要捐款</p>
@@ -219,7 +225,7 @@
     </section>
     <section id="service" name="service" class="bg-gray">
         <div class="container p-relative">
-            <div id="service_block">
+            <div id="service_block" data-aos="fade-up">
                 <div id="service_content">
                     <img src="./image/service.svg" alt="民眾服務信箱" loading="lazy">
                     <h6>您的聲音，我們的行動！</h6>
@@ -228,9 +234,9 @@
                 <form action="" id="service_form">
                     <input type="text" placeholder="您的姓名">
                     <input type="text" placeholder="您的Email">
-                    <input type="text" placeholder="您的手機">
+                    <input type="tel" placeholder="您的手機">
                     <textarea name="" id="" cols="30" rows="10" placeholder="您的建言"></textarea>
-                    <button class="btn btn-lg" type="button" onclick=""><p>送出意見</p></button>
+                    <button class="btn btn-lg" type="button" onclick="replyCommend()"><p>送出意見</p></button>
                 </form>
             </div>
         </div>
@@ -261,10 +267,36 @@
             <p>版權聲明：© 2023 喵立翰（Miao Li-Han） 版權所有。</p>
         </div>
     </footer>
-    <div class="lightbox">
-
+    <div class="lightbox" id="replyCommend">
+        <div class="lightbox_body">
+            <div class="lightbox_content">
+                <h3>感謝您抽出寶貴的時間給予我們寶貴的建議。</h3>
+                <h5>我們非常重視您的意見，它是我們不斷改進和提升服務的動力。您提出的建議已經轉交給相關部門進行評估，我們將努力在未來的服務中加以考慮和實施。</h5>
+                <button class="btn btn-sm btn-line cancel" onclick="closeCommend()" type="button">
+                    <a href="javascript:;">
+                        <p>返回</p>
+                    </a>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="lightbox" id="replyDonate">
+        <div class="lightbox_body">
+            <div class="lightbox_content">
+                <h3>感謝您成為喵星大使</h3>
+                <img src="./image/amount.svg" alt="捐款金額" loading="lazy">
+                <h2 class="text-primary">NT$<span class="counter">6000</span></h2>
+                <button class="btn btn-sm btn-line cancel" onclick="closeDonate()" type="button">
+                    <a href="javascript:;">
+                        <p>返回</p>
+                    </a>
+                </button>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.4/swiper-bundle.js" integrity="sha512-+cdO0hlQy815H6TSp1JWiV4XV2HIrkM+v1MlDIWqbpXU2mS+a6k1P+nzXIUytpuwWpzfHf0rIrEP0WXYs+G3lw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
